[tool.poetry]
name = "rsa-salaus"
version = "0.1.0"
description = ""
authors = ["Eva-Maria Asplund"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
coverage = "^7.6.1"
invoke = "^2.2.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
